--- a/Styles/styles1.css
+++ b/Styles/styles1.css
@@ -3,17 +3,22 @@
 } 
 .main {
     display: flex;
-    margin-left: 12em; margin-right: 6em;
+    margin-left: 12em;
+    margin-right: 6em;
     row-gap: 2em;
     flex-direction: column;
 }
+.text{
+    display: inline-block;
+    margin-bottom: 30px
+}
 .text1{
     display: inline-block;
-    margin-left: 3em;
+    margin-left: 50px;
 }
 .text2{
     display: inline-block;
-    margin-left: 2em;
+    margin-left: 20px;
 }
 .top { 
     justify-content:space-between;
