--- a/Css/styles1.css
+++ b/Css/styles1.css
@@ -1,46 +1,51 @@
-* {
-    margin: 0;
+*{
     padding: 0;
-} 
-.main {
+    margin: 0;
+}
+.title{
     display: flex;
-    margin-left: 12em;
-    margin-right: 6em;
-    row-gap: 2em;
-    flex-direction: column;
+    align-items: baseline;
+    gap: 30px;
 }
-.text{
-    display: inline-block;
-    margin-bottom: 30px
+.title h1{
+    margin-left: 80px;
+    font-size: 30px;
 }
-.text1{
-    display: inline-block;
-    margin-left: 50px;
+.title p{
+    font-weight: 400;
+    font-family:Arial, Helvetica, sans-serif;
 }
-.text2{
-    display: inline-block;
-    margin-left: 20px;
+.container{
+    margin-left:  300px;
+    margin-right: 100px;
+    
 }
-.top { 
-    justify-content:space-between;
+.header{
+    padding: 20px 0;
     display: flex;
+    justify-content: space-between;
 }
-.top .left-side {
-    background-color: yellow;
-    width: 10%;
-    height: 6em;
-}
-.top .right-side  {
+.header .header-item1{
     background-color: purple;
-    width: 55%;
-    height: 6em;
+    width: 50%;
+    height: 150px;
 }
-.items {
-    flex-wrap: wrap; display: flex;
-    justify-content:space-between;
-    gap: 2em;
+.header .header-item2{
+    background-color: yellow;
+    width: 25%;
+    height: 150px;
 }
-.items>div {
-    width: 15em; height: 19em;   
-    border: solid 2px black;
+.list-card{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    height:500px;
+}
+.item{
+    display: flex;
+    justify-content: center;
+    height:100%;
+    width: 30%;
+    border: 1px solid;
+    margin: 20px 0;
 }
